! Try to make sure that garbage collection for sessions is turned on when using database driven sessions. (Load.php) [Bug 1494]  & Added a compact linktree consiting of category name and current board name to the wireless templates. (Wireless template) [Feature 1243]  ! Check for registration errors before registering the user. (Register.php) [Bug 1495]  & Changed the moderation notes interface a bit and added scrollbars. (ModerationCenter template, style.css) [Bug 937]  + Lowered the limit of moderation notes to show and added pagination. (ModerationCenter.php, ModerationCenter template) [Bug 1476]  + Added the ability to delete moderation notes. (ModerationCenter.php, ModerationCenter template)  & Give the message icon cell a fixed width. (Display template) [Bug 1452]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@6724 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/style.css
+++ b/Themes/default/style.css
@@ -608,3 +608,18 @@ a.moderation_link, a.moderation_link:visited
 	cursor: pointer;
 	color: #EEEEEE;
 }
+
+/* Moderation Notes */
+.moderation_notes
+{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	overflow: auto;
+	height: 9.5em;
+}
+.moderation_notes li
+{
+	padding: 4px 0px 4px 4px;
+	border-bottom: 1px solid #cccccc;
+}
